--- a/contrib/debian/control
+++ b/contrib/debian/control
@@ -1,4 +1,4 @@
-Source: Bitglobalcoin
+Source: Sficoin
 Section: utils
 Priority: optional
 Maintainer: Alex D. <balthazar.ad@gmail.com>
@@ -18,14 +18,14 @@ Build-Depends: debhelper,
  libqrencode-dev
 Standards-Version: 3.9.2
 Homepage: http://www.novaco.in/
-Vcs-Git: git://github.com/Bitglobalcoin-project/Bitglobalcoin.git
-Vcs-Browser: http://github.com/Bitglobalcoin-project/Bitglobalcoin
+Vcs-Git: git://github.com/Sficoin-project/Sficoin.git
+Vcs-Browser: http://github.com/Sficoin-project/Sficoin
 
-Package: Bitglobalcoind
+Package: Sficoind
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: peer-to-peer network based digital currency - daemon
- Bitglobalcoin is a free open source peer-to-peer electronic cash system that
+ Sficoin is a free open source peer-to-peer electronic cash system that
  is completely decentralized, without the need for a central server or
  trusted parties.  Users hold the crypto keys to their own money and
  transact directly with each other, with the help of a P2P network to
@@ -36,14 +36,14 @@ Description: peer-to-peer network based digital currency - daemon
  Full transaction history is stored locally at each client.  This
  requires 150+ MiB of space, slowly growing.
  .
- This package provides Bitglobalcoind, a combined daemon and CLI tool to
+ This package provides Sficoind, a combined daemon and CLI tool to
  interact with the daemon.
 
-Package: Bitglobalcoin-qt
+Package: Sficoin-qt
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: peer-to-peer network based digital currency - Qt GUI
- Bitglobalcoin is a free open source peer-to-peer electronic cash system that
+ Sficoin is a free open source peer-to-peer electronic cash system that
  is completely decentralized, without the need for a central server or
  trusted parties.  Users hold the crypto keys to their own money and
  transact directly with each other, with the help of a P2P network to
@@ -54,4 +54,4 @@ Description: peer-to-peer network based digital currency - Qt GUI
  Full transaction history is stored locally at each client.  This
  requires 150+ MiB of space, slowly growing.
  .
- This package provides Bitglobalcoin-Qt, a GUI for Bitglobalcoin based on Qt.
+ This package provides Sficoin-Qt, a GUI for Sficoin based on Qt.
