--- a/contrib/debian/examples/novacoin.conf
+++ b/contrib/debian/examples/novacoin.conf
@@ -1,9 +1,9 @@
-# Bitglobalcoin.conf configuration file. Lines beginning with # are comments.
+# Sficoin.conf configuration file. Lines beginning with # are comments.
 
 
 # Network-related settings:
 
-# Run on the test network instead of the real Bitglobalcoin network.
+# Run on the test network instead of the real Sficoin network.
 #testnet=1
 
 # Connect via a socks4 proxy
@@ -16,7 +16,7 @@
 # to specific peers:
 #connect=81.200.241.54
 
-# Do not use Internet Relay Chat (irc.lfnet.org #Bitglobalcoin channel) to
+# Do not use Internet Relay Chat (irc.lfnet.org #Sficoin channel) to
 # find other peers.
 #noirc=1
 
@@ -26,7 +26,7 @@
 
 # JSON-RPC options (for controlling a running process)
 
-# server=1 tells Bitglobalcoin to accept JSON-RPC commands.
+# server=1 tells Sficoin to accept JSON-RPC commands.
 #server=1
 
 # You must set rpcuser and rpcpassword to secure the JSON-RPC api
@@ -43,12 +43,12 @@
 # Listen for RPC connections on this TCP port:
 rpcport=8344
 
-# You can use Bitglobalcoin or Bitglobalcoind to send commands to Bitglobalcoin/Bitglobalcoind
+# You can use Sficoin or Sficoind to send commands to Sficoin/Sficoind
 # running on another host using this option:
 rpcconnect=127.0.0.1
 
 # Use Secure Sockets Layer (also known as TLS or HTTPS) to communicate
-# with Bitglobalcoin -server or Bitglobalcoind
+# with Sficoin -server or Sficoind
 #rpcssl=1
 
 # OpenSSL settings used when rpcssl=1
@@ -63,12 +63,12 @@ rpcsslprivatekeyfile=server.pem
 # both prior transactions and several dozen future transactions.
 keypool=100
 
-# Pay an optional transaction fee every time you send Bitglobalcoins.  
+# Pay an optional transaction fee every time you send Sficoins.  
 paytxfee=0.01
 
 # User interface options
 
-# Start Bitglobalcoin minimized
+# Start Sficoin minimized
 #min=1
 
 # Minimize to the system tray
