--- a/contrib/debian/rules
+++ b/contrib/debian/rules
@@ -1,25 +1,25 @@
 #!/usr/bin/make -f
 # -*- mode: makefile; coding: utf-8 -*-
 
-DEB_INSTALL_EXAMPLES_Bitglobalcoind += debian/examples/*
-DEB_INSTALL_MANPAGES_Bitglobalcoind += debian/manpages/*
+DEB_INSTALL_EXAMPLES_Sficoind += debian/examples/*
+DEB_INSTALL_MANPAGES_Sficoind += debian/manpages/*
 
 %:
 	dh --with bash-completion $@
 
 override_dh_auto_build:
-	cd src; $(MAKE) -f makefile.unix Bitglobalcoind USE_ASM=1 USE_LEVELDB=1
+	cd src; $(MAKE) -f makefile.unix Sficoind USE_ASM=1 USE_LEVELDB=1
 	$(MAKE)
 
 override_dh_auto_clean:
-	if [ -f Makefile ]; then $(MAKE) clean; else rm -rf build/; rm -f Bitglobalcoin-qt; fi
+	if [ -f Makefile ]; then $(MAKE) clean; else rm -rf build/; rm -f Sficoin-qt; fi
 	cd src; $(MAKE) -f makefile.unix clean
 
 override_dh_auto_configure:
-	qmake Bitglobalcoin-qt.pro USE_ASM=1 USE_LEVELDB=1
+	qmake Sficoin-qt.pro USE_ASM=1 USE_LEVELDB=1
 
 # Ensure wrapper is set executable
-binary-post-install/Bitglobalcoind:
-	chmod +x $(cdbs_curdestdir)usr/bin/Bitglobalcoind
-binary-post-install/Bitglobalcoin-qt:
-	chmod +x $(cdbs_curdestdir)usr/bin/Bitglobalcoin-qt
+binary-post-install/Sficoind:
+	chmod +x $(cdbs_curdestdir)usr/bin/Sficoind
+binary-post-install/Sficoin-qt:
+	chmod +x $(cdbs_curdestdir)usr/bin/Sficoin-qt
